improved performance of checking favorite songs in tracklist